--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Create a Responsive Website Using CSS Grid Layout - Food Blog Theme
+     Yummy-Foods
     </title>
     <!-- <link rel="stylesheet" href="./fontawesome/css/all.css"> -->
     <link rel="stylesheet" href="css/style.css" />
